--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<!--<link rel="stylesheet" href="css/style.css">-->
 		<link rel="stylesheet" href="css/stylescss_3.css">
 		<link rel="stylesheet"  href="webfonts/all.css">
+		<link rel="preload" href="images/hero.jpg" as="image">
+
 		
 	</head>
 	<body data-spy="scroll" data-target="#booking">
@@ -69,7 +71,7 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<img src="images/01-welcomeAside.jpg" class="img-fluid" alt="Films en plein air" style="height:100%">
+						<img src="images/01-welcomeAside.jpg" class="img-fluid" alt="Films en plein air" style="height:100%" loading="lazy">
 					</aside>
 					<article class="col-lg-6">
 						<p>Festival des Films de Plein Air</p>
@@ -97,7 +99,7 @@
 						<a href="#booking" class="btn btn-custom"> Je réserve !</a>
 					</article>
 					<aside class="col-lg-6 order-first order-lg-2">
-						<img src="images/02-parcMonceauAside.jpg" class="img-fluid" alt="Parc Monceau">
+						<img src="images/02-parcMonceauAside.jpg" class="img-fluid" alt="Parc Monceau" loading="lazy">
 					</aside>
 				</div>
 			</div>
@@ -109,7 +111,7 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<img src="images/03-actuAside.jpg" class="img-fluid" alt="Actualité">
+						<img src="images/03-actuAside.jpg" class="img-fluid" alt="Actualité" loading="lazy">
 					</aside>
 					<article class="col-lg-6">
 						<h2 id="news">Actualités du Festival</h2>
@@ -129,9 +131,7 @@
 			<div class="container">
 				
 				<div class="row">
-					<!--<div class="col-12 col-sm-4 col-md2 imgResponsive">
-						<a href="#"><img src="images/01lesFiguresDeLombre.png"></a>
-					</div>-->
+				
 					<div class="col-12"><h2 id="movie">>Notre sélection 2025 : Le Voyage</h2></div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
 						<a href="films.html#01film" class="hoverImg" ><img src="images/01-films.jpg" class="img-fluid" alt="affiche film" style="height: 98%;" width="100%"></a>
