--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 				
 					<div class="col-12"><h2 id="movie">>Notre sélection 2025 : Le Voyage</h2></div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
-						<a href="films.html#01film" class="hoverImg" ><img src="images/01-films.jpg" class="img-fluid" alt="affiche film" style="height: 98%;" width="100%"></a>
+						<a href="films.html#01film" class="hoverImg" ><img src="images/01-films.jpg" class="img-fluid" alt="affiche film" style="height: 98%;" width="100%" loading="lazy"></a>
 						
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
-						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt="Into the Wild" style="height: 98%;" width="100%"></a>
+						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt="Into the Wild" style="height: 98%;" width="100%" loading="lazy"></a>
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2">
 						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt="The Secret Life of Walter Mitty" style="height: 98%;" width="100%"loading="lazy"></a>
@@ -376,9 +376,9 @@
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-		<script src="js/main.js"></script>	
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" defer></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" defer integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"  defer integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		<script src="js/main.js" defer></script>	
 	</body>
 </html>
