--- a/index.html
+++ b/index.html
@@ -71,13 +71,7 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<img src="images/01-welcomeAside.jpg" 
-						class="img-fluid" 
-						alt="Films en plein air" 
-						width="570" 
-						height="421" 
-						loading="lazy">
-
+						<img src="images/01-welcomeAside.jpg" class="img-fluid" alt="Films en plein air" style="height:100%" loading="lazy">
 					</aside>
 					<article class="col-lg-6">
 						<p>Festival des Films de Plein Air</p>
