--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<img src="images/01-welcomeAside.jpg" class="img-fluid" alt="Films en plein air" style="height:100%" loading="lazy">
+						<img src="images/01-welcomeAside.jpg" class="img-fluid" alt="Films en plein air" style="height:100%">
 					</aside>
 					<article class="col-lg-6">
 						<p>Festival des Films de Plein Air</p>
@@ -180,7 +180,7 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<img src="images/05-resaAside.jpg"class="img-fluid" alt="cinema sous les etoiles" style="height:75%; padding-top: 30px;">
+						<img src="images/05-resaAside.jpg"class="img-fluid" alt="cinema sous les etoiles" style="height:75%; padding-top: 30px;" loading="lazy">
 					</aside>
 					<article class="col-lg-6">
 						<h2 id="booking">🌟 Réservez votre soirée sous les étoiles</h2>
@@ -338,13 +338,13 @@
 		  <h5>🤝 Partenaires</h5>
 		  <div class="d-flex justify-content-center align-items-center flex-wrap gap-3 mt-3">
 			<a href="https://www.francetelevisions.fr/" target="_blank" class="logo-link">
-			  <img src="images/imgTH.png" alt="France Télévisions" style="max-height: 40px;">
+			  <img src="images/imgTH.png" loading="lazy" alt="France Télévisions" style="max-height: 40px;">
 			</a>
 			<a href="https://www.iledefrance.fr/" target="_blank" class="logo-link">
-			  <img src="images/logo-region-ile-de-france.png" alt="Région Île-de-France" style="max-height: 40px;">
+			  <img src="images/logo-region-ile-de-france.png" loading="lazy" alt="Région Île-de-France" style="max-height: 40px;">
 			</a>
 			<a href="https://www.paris.fr/" target="_blank" class="logo-link">
-			  <img src="images/Ville_de_Paris_logo_2019.svg" alt="Mairie de Paris" style="max-height: 40px;">
+			  <img src="images/Ville_de_Paris_logo_2019.svg" loading="lazy" alt="Mairie de Paris" style="max-height: 40px;">
 			</a>
 		  </div>
 		</div>
