--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 		<meta name="description" content="Festival de films d’auteur en plein air au Parc Monceau à Paris, du 5 au 7 août, sur le thème du voyage.">
 		
 		<!--Open graph data-->
-		<meta property="og:title" content="Festival des Films de Plein Air - Paris 2025"/>
-		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="https://www.festivalpleinair.com"/>
-		<meta property="og:image" content="https://www.festivalpleinair.com/images/og-cover.jpg"/>
-		<meta property="og:description" content="Vivez l’expérience magique du cinéma d’auteur sous les étoiles, du 5 au 7 août 2025 au Parc Monceau. Découvrez la programmation et réservez dès maintenant."/>
+		<meta property="og:title" content="Festival des Films de Plein Air - Paris 2025">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://www.festivalpleinair.com">
+		<meta property="og:image" content="https://www.festivalpleinair.com/images/og-cover.jpg">
+		<meta property="og:description" content="Vivez l’expérience magique du cinéma d’auteur sous les étoiles, du 5 au 7 août 2025 au Parc Monceau. Découvrez la programmation et réservez dès maintenant.">
 
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
 		<!-- CSS -->
 		<link rel="stylesheet" href="css/bootstrap.css">
@@ -36,7 +36,7 @@
 		<!--00.header-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 			<a class="navbar-brand" href="#">
-				<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival" />
+				<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -97,7 +97,7 @@
 			<div class="container">
 				<div class="row">
 					<article class="col-lg-6">
-						<h2 id="about">À propos du festival</h2>
+						<h2>À propos du festival</h2>
 						<p>Chaque été, notre festival propose une sélection unique de films d’auteur en plein air, dans le cadre idyllique du parc Monceau. Cette année, le thème est « Le voyage » : des récits intimes aux aventures épiques, laissez-vous emporter par le 7e art.
                         </p>
 						<a href="#booking" class="btn btn-custom"> Je réserve !</a>
@@ -138,41 +138,41 @@
 				
 					<div class="col-12"><h2 id="movie">>Notre sélection 2025 : Le Voyage</h2></div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
-						<a href="films.html#01film" class="hoverImg" ><img src="images/01-films.jpg" class="img-fluid" alt="affiche film" style="height: 98%;" width="100%" loading="lazy"></a>
+						<a href="films.html#01film" class="hoverImg" ><img src="images/01-films.jpg" class="img-fluid" alt="affiche film" style="height: 98%; width:100% loading=lazy"></a>
 						
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
-						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt="Into the Wild" style="height: 98%;" width="100%" loading="lazy"></a>
+						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt="Into the Wild" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt="The Secret Life of Walter Mitty" style="height: 98%;" width="100%"loading="lazy"></a>
+						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt="The Secret Life of Walter Mitty" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 					<div class=" col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#04film"><img src="images/04-films.jpg" class="img-fluid" alt="L'Auberge Espagnole" style="height: 98%;" width="100%"loading="lazy"></a>
+						<a href="films.html#04film"><img src="images/04-films.jpg" class="img-fluid" alt="L'Auberge Espagnole" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#05film"><img src="images/05-films.jpg" class="img-fluid" alt="Tracks" style="height: 98%;" width="100%"loading="lazy"></a>
+						<a href="films.html#05film"><img src="images/05-films.jpg" class="img-fluid" alt="Tracks" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#06film"><img src="images/06-films.jpg" class="img-fluid" alt="Le Grand Voyage" style="height: 98%;" width="100%"loading="lazy"></a>
+						<a href="films.html#06film"><img src="images/06-films.jpg" class="img-fluid" alt="Le Grand Voyage" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#07film"><img src="images/07-films.jpg" class="img-fluid" alt="The Motorcycle Diaries (Carnets de voyage)" style="height: 98%;" width="100%"loading="lazy"></a>
+						<a href="films.html#07film"><img src="images/07-films.jpg" class="img-fluid" alt="The Motorcycle Diaries (Carnets de voyage)" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#08film"><img src="images/08-films.jpg" class="img-fluid" alt="Before Sunrise" style="height: 98%;" width="100%"loading="lazy"></a>
+						<a href="films.html#08film"><img src="images/08-films.jpg" class="img-fluid" alt="Before Sunrise" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#09film"><img src="images/09-films.jpg"class="img-fluid" alt="Lost in Translation" style="height: 98%;" width="100%"loading="lazy"></a>
+						<a href="films.html#09film"><img src="images/09-films.jpg"class="img-fluid" alt="Lost in Translation" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#10film"><img src="images/10-films.jpg" class="img-fluid" alt="Paris, Texas" style="height: 98%;" width="100%" loading="lazy"></a>
+						<a href="films.html#10film"><img src="images/10-films.jpg" class="img-fluid" alt="Paris, Texas" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#11film"><img src="images/11-films.jpg"class="img-fluid" alt="La Route d’Istanbul" style="height: 98%;" width="100%" loading="lazy"></a>
+						<a href="films.html#11film"><img src="images/11-films.jpg" class="img-fluid" alt="La Route d’Istanbul" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt="Wild" style="height: 98%;" width="100%" loading="lazy"></a>
+						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt="Wild" style="height: 98%; width:100% loading=lazy"></a>
 					</div>
 				</div>
 			</div>
@@ -191,21 +191,21 @@
 						<form class="needs-validation" novalidate id="bookingValidation">				
 							<div class="form-group">
 								<label for="nom">👤 Votre nom</label>
-								<input class="form-control" required type="text" name="nom" id="nom" placeholder="ex : Camille Martin" />
+								<input class="form-control" required type="text" name="nom" id="nom" placeholder="ex : Camille Martin" >
 								<div class="invalid-tooltip">
 									Merci de renseigner vos prénom et nom.
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="mail">📧 Votre e-mail</label>
-								<input class="form-control" required type="email" name="mail" id="mail" placeholder="ex : camille@mail.com" />
+								<input class="form-control" required type="email" name="mail" id="mail" placeholder="ex : camille@mail.com" >
 								<div class="invalid-tooltip">
 									Merci de renseigner votre e-mail.
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="phone">📱 Votre téléphone</label>
-								<input class="form-control" required type="tel" name="phone" id="phone" placeholder="ex : 0612345678" />
+								<input class="form-control" required type="tel" name="phone" id="phone" placeholder="ex : 0612345678" >
 								<div class="invalid-tooltip">
 									Merci de renseigner votre numéro de téléphone.
 								</div>
@@ -269,21 +269,21 @@
 						<form class="needs-validation" novalidate id="contactValidation">
 							<div class="form-group">
 								<label for="nom">👤 Prénom & Nom</label>
-								<input class="form-control" required type="text" name="nom" id="nom" placeholder="ex : Camille Martin" />
+								<input class="form-control" required type="text" name="nom" id="nom" placeholder="ex : Camille Martin" >
 								<div class="invalid-tooltip">
 									Merci de renseigner vos prénom et nom.
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="mail">📧 Adresse e-mail</label>
-								<input class="form-control" required type="email" name="mail" id="mail" placeholder="ex : camille@mail.com" />
+								<input class="form-control" required type="email" name="mail" id="mail" placeholder="ex : camille@mail.com" >
 								<div class="invalid-tooltip">
 									Merci de renseigner votre e-mail.
 								</div>
 							</div>
 							<div class="form-group">
 								<label for="sujet">📝 Sujet de votre message</label>
-								<input class="form-control" required type="text" name="sujet" id="sujet" placeholder="Sujet" />
+								<input class="form-control" required type="text" name="sujet" id="sujet" placeholder="Sujet" >
 								<div class="invalid-tooltip">
 									Merci de renseigner le sujet.
 								</div>
