--- a/article.html
+++ b/article.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
 	<title>Article | Festival des Films de Plein Air</title>
@@ -10,14 +11,14 @@
 	<meta name="author" content="Université Côte d’Azur">
 
 	<!-- Open graph data -->
-	<meta property="og:title" content="Actualité | Festival des Films de Plein Air 2025" />
-	<meta property="og:type" content="article" />
-	<meta property="og:url" content="https://www.festivalpleinair.com/article.html" />
-	<meta property="og:image" content="https://www.festivalpleinair.com/images/article_og.jpg" />
-	<meta property="og:description" content="Plongez dans l’univers du Festival à travers nos articles et reportages exclusifs sur le cinéma d’auteur en plein air." />
+	<meta property="og:title" content="Actualité | Festival des Films de Plein Air 2025">
+	<meta property="og:type" content="article">
+	<meta property="og:url" content="https://www.festivalpleinair.com/article.html">
+	<meta property="og:image" content="https://www.festivalpleinair.com/images/article_og.jpg">
+	<meta property="og:description" content="Plongez dans l’univers du Festival à travers nos articles et reportages exclusifs sur le cinéma d’auteur en plein air.">
 
 	<!--fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 	<!--CSS-->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/stylescss_3.css">
@@ -28,7 +29,7 @@
 <!--00.header-->
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 	<a class="navbar-brand" href="#">
-		<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival" />
+		<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival">
 	</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -59,6 +60,7 @@
 		</div>
 		<div class="row">
 			<article>
+				<h2 class="visually-hidden">article 1</h2>
 				<p>Hier soir, le Parc Monceau a accueilli les cinéphiles venus assister à l’ouverture tant attendue du Festival des Films de Plein Air. Dans une ambiance chaleureuse, les spectateurs ont découvert le premier film de la sélection : un chef-d’œuvre du cinéma indépendant français, projeté sous les étoiles.</p>
 				<p>La cérémonie d’ouverture a débuté par un discours de la directrice artistique du festival, évoquant les valeurs de partage, de création et d’émotion qui animent cette édition 2025. Le public a ensuite pu profiter d’une projection en plein air avec un système sonore immersif et un écran géant au cœur du parc.</p>
 				<p>Des animations étaient également proposées tout au long de la soirée, notamment des stands gourmands, un espace photo vintage, et un mini-concert acoustique avant la tombée de la nuit.</p>
