--- a/films.html
+++ b/films.html
@@ -10,14 +10,14 @@
 		<meta name="description" content="Découvrez la programmation complète du Festival des Films de Plein Air : 12 films d’auteur à voir sous les étoiles du 5 au 7 août 2025 à Paris.">
 		
 		<!--Open graph data-->
-		<meta property="og:title" content="Les Films - Festival des Films de Plein Air"/>
-		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="https://yuhan-ux.github.io/festival/films.html"/>
-		<meta property="og:image" content="https://yuhan-ux.github.io/festival/images/og-film.jpg"/>
-		<meta property="og:description" content="Explorez la sélection des 12 films projetés en plein air au Parc Monceau. Une expérience cinématographique unique sous les étoiles de Paris."/>
-			
+		<meta property="og:title" content="Les Films - Festival des Films de Plein Air">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://yuhan-ux.github.io/festival/films.html">
+		<meta property="og:image" content="https://yuhan-ux.github.io/festival/images/og-film.jpg">
+		<meta property="og:description" content="Explorez la sélection des 12 films projetés en plein air au Parc Monceau. Une expérience cinématographique unique sous les étoiles de Paris.">
+
 	<!--fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 	
 	<!--CSS-->
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -32,30 +32,32 @@
 	<!--00.header-->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 		<a class="navbar-brand" href="index.html">
-			<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Retour à la page d'accueil">
-		  </a>
-		  
+		  <img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Retour à la page d'accueil">
+		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
+		  <span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-			<div class="navbar-nav ml-auto">
-			<a class="nav-item nav-link " href="index.html">accueil <span class="sr-only">(current)</span></a>
+		  <div class="navbar-nav ml-auto">
+			<a class="nav-item nav-link" href="index.html">accueil</a>
 			<a class="nav-item nav-link active" href="#">Les Films</a>
 			<a class="nav-item nav-link" href="index.html#booking">Réservation</a>
-			<a href="blog.html" class="nav-item nav-link navLink">Actualités</a>
+			<a class="nav-item nav-link" href="blog.html">Actualités</a>
 			<a class="nav-item nav-link" href="contact.html">Contact</a>
-			</div>
+		  </div>
 		</div>
-	</nav>
+	  </nav>
 	<!--end header-->
     
 	
+	<!-- Film Sections with Headings -->
 	<div class="jumbotron text-center">
 		<span>✨ Chaque soir, une histoire à vivre ensemble</span>
-	</div>
-	<section class="container-fluid filmlist">
+	  </div>
+	  <section class="container-fluid filmlist">
 		<div class="container">
+		  <h2 class="visually-hidden">Films - Partie 1</h2>
+
 			<div class="row film01">
 				<aside class="col-sm-4">
 				</aside>
@@ -141,9 +143,12 @@
 
 	<div class="jumbotron text-center">
 		<span>🎬 Sous le ciel étoilé, laissez-vous emporter par le cinéma</span>
-	</div>
-	<section class="container-fluid filmlist">
+	  </div>
+	
+	  <section class="container-fluid filmlist">
 		<div class="container">
+		  <h2 class="visually-hidden">Films - Partie 2</h2>
+
 			<div class="row film04">
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
@@ -234,6 +239,7 @@
 	</div>
 	<section class="container-fluid filmlist">
 		<div class="container">
+			<h2 class="visually-hidden">Films - Partie 3</h2>
 			<div class="row film07">
 				<aside class="col-sm-4"></aside>
 				<article class="col-sm-8">
@@ -324,6 +330,7 @@
 		</div>
 		<section class="container-fluid filmlist">
 			<div class="container">
+				<h2 class="visually-hidden">Films - Partie 4</h2>
 				<div class="row film10">
 					<aside class="col-sm-4"></aside>
 					<article class="col-sm-8">
