--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <title>Mentions légales | Festival des Films de Plein Air</title>
 
@@ -10,14 +10,14 @@
   <meta name="description" content="Consultez les mentions légales du site du Festival des Films de Plein Air à Paris : informations juridiques, données personnelles, cookies et conditions d'utilisation.">
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="Mentions légales | Festival des Films de Plein Air 2025" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.festivalpleinair.com/mentions-legales.html" />
-  <meta property="og:image" content="https://www.festivalpleinair.com/images/og_mentions.jpg" />
-  <meta property="og:description" content="Retrouvez toutes les informations juridiques concernant le Festival de cinéma en plein air, du 5 au 7 août 2025 à Paris." />
+  <meta property="og:title" content="Mentions légales | Festival des Films de Plein Air 2025">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.festivalpleinair.com/mentions-legales.html">
+  <meta property="og:image" content="https://www.festivalpleinair.com/images/og_mentions.jpg">
+  <meta property="og:description" content="Retrouvez toutes les informations juridiques concernant le Festival de cinéma en plein air, du 5 au 7 août 2025 à Paris.">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <!-- CSS -->
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/stylescss_3.css">
@@ -28,7 +28,7 @@
 <!--00.header-->
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
     <a class="navbar-brand" href="index.html">
-        <img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" />
+        <img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="logo">
 
     </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
