--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -10,14 +9,14 @@
 		<meta name="description" content="">
 		
 		<!--Open graph data-->
-		<meta property="og:title" content="Actualités | Festival des Films de Plein Air 2025" />
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://www.festivalpleinair.com/blog.html" />
-		<meta property="og:image" content="https://www.festivalpleinair.com/images/og_blog.jpg" />
-		<meta property="og:description" content="Suivez les dernières nouvelles du Festival à Paris : projections en plein air, rencontres exclusives avec les réalisateurs et bien plus encore." />
+		<meta property="og:title" content="Actualités | Festival des Films de Plein Air 2025">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://www.festivalpleinair.com/blog.html">
+		<meta property="og:image" content="https://www.festivalpleinair.com/images/og_blog.jpg">
+		<meta property="og:description" content="Suivez les dernières nouvelles du Festival à Paris : projections en plein air, rencontres exclusives avec les réalisateurs et bien plus encore.">
 		
 	<!--fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 	<!--CSS-->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!--<link rel="stylesheet" href="css/style.css">-->
@@ -32,7 +31,7 @@
 	<!--00.header-->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 		<a class="navbar-brand" href="#">
-			<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival" />
+			<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -58,7 +57,8 @@
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
                     <img class="card-img-top" src="images/air2.jpg" alt="un lieu en air"  style="height: 32%;">
                     <div class="card-body">
-                        <h5 class="card-title">📅 Le festival ouvre ses portes le 5 août</h5>
+                        <h2 class="visually-hidden">Description du film</h2>
+						<h5 class="card-title">📅 Le festival ouvre ses portes le 5 août</h5>
 						<p class="infoBlog">5 avril 2025 | Par Jennifer Viala</p>
 						<p class="card-text">Le Festival des Films de Plein Air se tiendra du 5 au 8 août 2025 au Parc Monceau, à Paris. Quatre soirées magiques sous les étoiles vous attendent !</p>
 
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="card m-2 px-0 col-12  col-md-4 col-lg-3" style="width: 18rem;">
-                    <img class="card-img-top" src="images/14.jpg" alt="12 films du thème Voyage"style="height: 32%;" >
+                    <img class="card-img-top" src="images/14.jpg" alt="12 films du thème Voyage" style="height: 32%;" >
                     <div class="card-body">
 						<h5 class="card-title">🎬 Les 12 films du thème “Voyage” sont dévoilés</h5>
 						<p class="infoBlog">4 avril 2025 | Par Jennifer Viala</p>
