--- a/contact.html
+++ b/contact.html
@@ -10,15 +10,15 @@
 		<meta name="description" content="">
 		
 		<!--Open graph data-->
-		<meta property="og:title" content="Contactez-nous | Festival des Films de Plein Air"/>
-		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="https://www.festivalpleinair.com/contact.html"/>
-		<meta property="og:image" content="https://www.festivalpleinair.com/images/og-contact.jpg"/>
-		<meta property="og:description" content="Une question ? Une demande de partenariat ou d'information ? Contactez l'équipe du Festival des Films de Plein Air à Paris du 5 au 7 août 2025."/>
+		<meta property="og:title" content="Contactez-nous | Festival des Films de Plein Air">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://www.festivalpleinair.com/contact.html">
+		<meta property="og:image" content="https://www.festivalpleinair.com/images/og-contact.jpg">
+		<meta property="og:description" content="Une question ? Une demande de partenariat ou d'information ? Contactez l'équipe du Festival des Films de Plein Air à Paris du 5 au 7 août 2025.">
 
 
 	<!--fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 	<!--CSS-->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!--<link rel="stylesheet" href="css/style.css">-->
@@ -33,7 +33,7 @@
 	<!--00.header-->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 		<a class="navbar-brand" href="#">
-			<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival" />
+			<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -51,16 +51,17 @@
 	<!--end header-->
 	<!--Map-->
 	<section class="container-fluid">
-		<iframe 
-						  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.843236364008!2d2.3091703767124353!3d48.87914237133659!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fdf18a65e9f%3A0x1a8d022eab6740ef!2sParc%20Monceau!5e0!3m2!1sfr!2sfr!4v1712593629852!5m2!1sfr!2sfr" 
-						  width="100%" 
-						  height="350" 
-						  style="border:0;" 
-						  allowfullscreen="" 
-						  loading="lazy" 
-						  referrerpolicy="no-referrer-when-downgrade"
-						  title="Carte du Parc Monceau, lieu du Festival de Films de Plein Air">
-						</iframe>
+		<h2 class="visually-hidden">map</h2>
+		
+		<iframe src="https://www.google.com/maps/embed?..."
+		height="350"
+		style="border:0; width:100%;"
+		allowfullscreen=""
+		loading="lazy"
+		referrerpolicy="no-referrer-when-downgrade"
+		title="Carte du Parc Monceau, lieu du Festival de Films de Plein Air">
+	  </iframe>
+
     </section>
 	<section class="container-fluid contactPage">
 		<div class="container py-5">
@@ -73,21 +74,21 @@
 							<form class="needs-validation" novalidate id="contactValidation">
 								<div class="form-group">
 									<label for="nom">Prénom Nom</label>
-									<input class="form-control" required type="text" name="nom" id="nom" placeholder="Jean Dupond" />
+									<input class="form-control" required type="text" name="nom" id="nom" placeholder="Jean Dupond">
 									<div class="invalid-tooltip">
 										Merci de renseigner vos prénom et nom.
 									</div>
 								</div>
 								<div class="form-group">
 									<label for="mail">E-mail</label>
-									<input class="form-control" required type="email" name="mail" id="mail" placeholder="jeandupond@monmail.fr" />
+									<input class="form-control" required type="email" name="mail" id="mail" placeholder="jeandupond@monmail.fr">
 									<div class="invalid-tooltip">
 										Merci de renseigner votre e-mail.
 									</div>
 								</div>
 								<div class="form-group">
 									<label for="sujet">Sujet</label>
-									<input class="form-control" required type="text" name="sujet" id="sujet" placeholder="Sujet" />
+									<input class="form-control" required type="text" name="sujet" id="sujet" placeholder="Sujet">
 									<div class="invalid-tooltip">
 										Merci de renseigner le sujet.
 									</div>
@@ -115,7 +116,7 @@
 					<h2>Accueil téléphonique</h2>
 					<p>Du lundi au vendredi de 9h à 17h (heure de Paris).</p>
 
-					<div class="banContact"><img src="images/BanContact.jpg" alt=""></div>
+					<div class="banContact"><img src="images/BanContact.jpg" alt="chat"></div>
 				</div>
 			</div>
 		</div>
