--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			  <h2 class="visually-hidden">Accueil</h2>
 			  <div class="row">
 				<aside class="col-lg-6">
-				  <img src="images/01-welcomeAside.png" class="img-fluid" alt="Films en plein air" style="height:100%" loading="lazy">
+				  <img src="images/01-welcomeAside.jpg" class="img-fluid" alt="Films en plein air" style="height:100%" loading="lazy">
 				</aside>
 				<article class="col-lg-6">
 				  <h2 class="visually-hidden">Introduction au festival</h2>
