--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 			  <h2 class="visually-hidden">Accueil</h2>
 			  <div class="row">
 				<aside class="col-lg-6">
-				  <img src="images/01-welcomeAside.png" class="img-fluid" alt="Films en plein air" style="height:100%" loading="lazy">
+					<img src="images/01-welcomeAside.png" class="img-fluid" alt="Films en plein air"
+					width="570" height="421" loading="lazy">			   
 				</aside>
 				<article class="col-lg-6">
 				  <h2 class="visually-hidden">Introduction au festival</h2>
@@ -259,7 +260,8 @@
 					allowfullscreen="" 
 					loading="lazy" 
 					referrerpolicy="no-referrer-when-downgrade" 
-					title="Carte du Parc Monceau, lieu du Festival de Films de Plein Air">
+					title="Carte du Parc Monceau, lieu du Festival de Films de Plein Air"
+					decoding="async">
 				  </iframe>
 				  
 				</aside>
