--- a/index.html
+++ b/index.html
@@ -76,8 +76,13 @@
 			  <h2 class="visually-hidden">Accueil</h2>
 			  <div class="row">
 				<aside class="col-lg-6">
-					<img src="images/01-welcomeAside.png" class="img-fluid" alt="Films en plein air"
-					width="570" height="421" loading="lazy">			   
+					<img src="images/01-welcomeAside.png" 
+						class="img-fluid" 
+						alt="Films en plein air" 
+						width="570" height="421" 
+						loading="lazy"
+						style="width: 100%; height: 100%; object-fit: cover;">
+							
 				</aside>
 				<article class="col-lg-6">
 				  <h2 class="visually-hidden">Introduction au festival</h2>
