--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 		<!--00.header-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 			<a class="navbar-brand" href="#">
-				<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" alt="Logo du festival">
+				<img src="images/logo_cinema.avif" alt="Logo du festival"
+    				 width="85" height="85" style="border-radius: 50%;">
+
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -76,12 +78,12 @@
 			  <h2 class="visually-hidden">Accueil</h2>
 			  <div class="row">
 				<aside class="col-lg-6">
-					<img src="images/01-welcomeAside.png" 
-						class="img-fluid" 
-						alt="Films en plein air" 
-						width="570" height="421" 
-						loading="lazy"
-						style="width: 100%; height: 100%; object-fit: cover;">
+					<img src="images/01-welcomeAside.webp"
+					alt="Films en plein air"
+					width="570" height="421"
+					loading="lazy"
+					style="object-fit: cover;" class="img-fluid">
+
 							
 				</aside>
 				<article class="col-lg-6">
