--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			  <h2 class="visually-hidden">Accueil</h2>
 			  <div class="row">
 				<aside class="col-lg-6">
-					<img src="images/01-welcomeAside.webp"
+					<img src="images/01-welcomeAside.png"
 					alt="Films en plein air"
 					width="570" height="421"
 					loading="lazy"
