--- a/index.html
+++ b/index.html
@@ -77,13 +77,15 @@
 			<div class="container">
 			  <h2 class="visually-hidden">Accueil</h2>
 			  <div class="row">
-				<aside class="col-lg-6">
-					<img src="images/01-welcomeAside.png" class="img-fluid"
+				<aside class="col-lg-6" style="max-height: 421px; overflow: hidden;">
+					<img src="images/01-welcomeAside.png"
 					alt="Films en plein air"
-					width="570" height="421" loading="lazy"
-					style="width: 100%; height: 100%; object-fit: cover;">
+					style="width: 100%; aspect-ratio: 4 / 3; object-fit: cover;"
+					class="img-fluid">
 
 				</aside>
+				
+
 				<article class="col-lg-6">
 				  <h2 class="visually-hidden">Introduction au festival</h2>
 				  <p>Festival des Films de Plein Air</p>
