--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,33 @@
 
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-	<title>Contact | Festival des Films de Plein Air</title>
-		
-		<!--Metatags-->
+	<head>
+		<title>Contact | Festival des Films de Plein Air</title>
+	  
+		<!-- Metatags SEO -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		
-		<!--Open graph data-->
-		<meta property="og:title" content="Contactez-nous | Festival des Films de Plein Air">
+		<meta name="description" content="Vous avez une question sur le festival, besoin d'informations ou envie de nous proposer un partenariat ? Contactez l'équipe du Festival des Films de Plein Air à Paris.">
+		<meta name="keywords" content="contact, partenariat, informations, festival plein air, cinéma, Paris, équipe, formulaire, message">
+		<meta name="author" content="Université Côte d’Azur">
+		<link rel="canonical" href="https://www.festivalpleinair.com/contact.html">
+	  
+		<!-- Open Graph data -->
+		<meta property="og:title" content="Contact | Festival des Films de Plein Air">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://www.festivalpleinair.com/contact.html">
 		<meta property="og:image" content="https://www.festivalpleinair.com/images/og-contact.jpg">
 		<meta property="og:description" content="Une question ? Une demande de partenariat ou d'information ? Contactez l'équipe du Festival des Films de Plein Air à Paris du 5 au 7 août 2025.">
-
-
-	<!--fonts-->
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-	<!--CSS-->
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<!--<link rel="stylesheet" href="css/style.css">-->
-	<link rel="stylesheet" href="css/stylescss_3.css">
-	<link rel="stylesheet"  href="webfonts/all.css">
-	
-
-
-</head>
+	  
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+	  
+		<!-- CSS -->
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/stylescss_3.css">
+		<link rel="stylesheet" href="webfonts/all.css">
+	  </head>
+	  
 <body>
 
 	<!--00.header-->
