--- a/blog.html
+++ b/blog.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-	<title>Actualités | Festival des Films de Plein Air</title>
+	<head>
+		<title>Actualités | Festival des Films de Plein Air</title>
 		
-		<!--Metatags-->
+		<!--Metatags SEO-->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
-		
-		<!--Open graph data-->
-		<meta property="og:title" content="Actualités | Festival des Films de Plein Air 2025">
+		<meta name="description" content="Découvrez les dernières actualités du Festival des Films de Plein Air à Paris : annonces de programmation, événements spéciaux, partenaires officiels et plus encore.">
+		<meta name="keywords" content="festival, cinéma, plein air, Paris, été 2025, films, projections, actualités, événements culturels">
+		<meta name="author" content="Université Côte d’Azur">
+		<link rel="canonical" href="https://www.festivalpleinair.com/blog.html" />
+	  
+		<!-- Open Graph data -->
+		<meta property="og:title" content="Actualités du Festival des Films de Plein Air 2025">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://www.festivalpleinair.com/blog.html">
 		<meta property="og:image" content="https://www.festivalpleinair.com/images/og_blog.jpg">
 		<meta property="og:description" content="Suivez les dernières nouvelles du Festival à Paris : projections en plein air, rencontres exclusives avec les réalisateurs et bien plus encore.">
-		
-	<!--fonts-->
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-	<!--CSS-->
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<!--<link rel="stylesheet" href="css/style.css">-->
-	<link rel="stylesheet" href="css/stylescss_3.css">
-	<link rel="stylesheet"  href="webfonts/all.css">
-	
-
-
-</head>
+	  
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+	  
+		<!-- CSS -->
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/stylescss_3.css">
+		<link rel="stylesheet" href="webfonts/all.css">
+	  </head>
+	  
 <body>
 
 	<!--00.header-->
